    of the help DOM, made Surround only show help on the field if there's 
    help content. Note that this should be refined to use colspan if there
    is a mixture of fields with help/no help.
 * s/auth/author/ for the url types.
 * Added help for the Personal Details fields. 

2006-10-26 cjg
 * Reworked template and default homepage for beta release

2006-10-26 cjg
 * Fixed bug introduced in s/children/get_children/ 

2006-10-27 tmb
 * Added hook for overriding default username/password check (e.g. for handing off to LDAP server)

2006-10-27 tdb
 * DOM spec fixes to XML::DOM, XML::LibXML
 * Added hasAttribute to XML::DOM (error in EPC.pm)
 * More examples from dom_compare.pl

2006-10-27 tdb
 * Added support for XML::LibXML
 * Changed (most) DOM calls to use the DOM Core method names

2006-10-30 cjg
 * Changed autocomplete param to "q="
 * Added a lookup directory for doing autocompletion responses
 * The workflow now points to the new autocompletion scripts
 * Made a nominal name completion script. Just works on-the-fly.
 * Changed searching from "editors" to "editors_name"
 * Fixed a broken link in index.xpage
 * Converted some embedded phrases in the phrase file to epc: (they
    were mistakenly epp:)
 * Removed dodgey "issn" autocompletion demonstrator.
 * Cleaned up warnings for __WARN__ and __DIE__ when tunning inside the
    $c->{} subroutines.
 * Added an environmental variable to disable checking the correct user
 * Used this to call eprints bin scripts from mod_perl

2006-10-30 cjg
 * Changed blister bar to use buttons
 * Added jump action to deposit and edit eprint, to handle response to the
    blister buttons.
 * Fixed bug in render-date which showed wrong date by one month.
 * Added set_stage method to workflow to facilitate jumps
 * Flag on blister bar was inverted (said "isstaff" but actually meant 
    "notstaff"). Fixed.
 * Journal autocomplete now works in a limited fashion.

 