@@ -4925,4 +4925,8 @@ PACKAGE: 2.2.99.2
     "notstaff"). Fixed.
  * Journal autocomplete now works in a limited fashion.
 
+2006-10-30 cjg
+ * Added note about DOAR policies tool into oai.pl
+ * Fixed plugins which use mime_types to just take the document type as 
+    the mime_type by default.
  
